<resources>
    <string name="app_name">BlaBlaWild</string>
    <string name="action_settings">Settings</string>
    <string name="departure">Departure</string>
    <string name="destination">Destination</string>
    <string name="date">Date</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="_01_01_1970">01/01/1970</string>
    <string name="date_optional">Date (Optional)</string>
    <string name="search_text">Search</string>
    <string name="_31_12_1970_03_30_pm">31/12/1970 03:30 PM</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">Firstname</string>
    <string name="_19">$19</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="kilometers">Kilometers</string>
    <string name="hours">Hours</string>
    <string name="send">Send</string>
    <string name="speed">Speed</string>

    <string-array name="planets_array">
        <item>Please select ...</item>
        <item>Car</item>
        <item>Boat</item>
        <item>Plane</item>
    </string-array>
</resources>
